--- a/aethereal/pom.xml
+++ b/aethereal/pom.xml
@@ -14,6 +14,7 @@
 		<maven.version>3.3.9</maven.version>
 		<wagon.version>3.3.2</wagon.version>
 		<log4j.version>2.13.3</log4j.version>
+		<rascal.version>0.13.0</rascal.version>
 		<gson.version>2.8.8</gson.version>
 	</properties>
 
@@ -110,6 +111,11 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.rascalmpl</groupId>
+			<artifactId>rascal</artifactId>
+			<version>${rascal.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
